--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,12 +1,20 @@
-.container{
+.navigation{
     position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    top: 0;
+    left: 0;
+    z-index: 1;
     width: 100%;
-    height: 15vh;
-    background-color: rgb(217, 217, 217);
+    height: 120px;
+    transition: .3s ease-in;
+    
+    
+}
+
+.navigationBg{
+    background-color: black;
 }
 
 .nav{
@@ -14,9 +22,12 @@
     height: 100%;
     display: flex;
     flex-flow: row;
+    position: absolute;
     justify-content: space-between;
-    align-items: center;  
+    align-items: center;
+     
 }
+
 
 .list{
     width: 100%;
@@ -70,26 +81,25 @@
     width: 100vw;
     height: 100vh;
     position: fixed;
-    left: 0;
+    top: 0;
     top: 0;
     background-color: rgb(15, 14, 14);
-    transition: .2s ease-in-out;
+    transition: .25s ease-in-out;
 
 }
 
 .sidebar{
     position: fixed;
-    left: -100vw;
-    top: 0;
-    width: 75vw;
+    /*left: -100vw;*/
+    top: -100vh;
+    width: 100vw;
     height: 100vh;
-    background-color: white;
-    opacity: 0;
-    transition: .5s ease-in-out;
+    transition: .25s ease-in-out;
 }
 
 .sidebarHead{
     width: 90%;
+    
     display: flex;
     flex-direction: row-reverse;
     color: white;
@@ -122,7 +132,7 @@
     
 }
 
-.sideFooter{
+.sidebarExpanded > .sideFooter{
     width: 100%;
     display: flex;
     flex-flow: column;
@@ -132,17 +142,17 @@
     bottom: 24px;
 }
 
-.cta{
+.sideFooter > .cta{
+    width: 100%;
     display: flex;
     justify-content: center;
-   
     font-size: 1.2rem;
     color: white;
 
 }
 
-.socialItems{
-    width: 50%;
+.sideFooter > .socialItems{
+    width: 100%;
     font-size: 1.4rem;
     display: flex;
     justify-content: space-around;
